; ModuleID = '/home/carl/AnghaBench/linux/drivers/media/usb/uvc/extr_uvc_v4l2.c_uvc_ioctl_g_parm.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/media/usb/uvc/extr_uvc_v4l2.c_uvc_ioctl_g_parm.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.file = type { i32 }
%struct.v4l2_streamparm = type { i32 }
%struct.uvc_fh = type { %struct.uvc_streaming* }
%struct.uvc_streaming = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.file*, i8*, %struct.v4l2_streamparm*)* @uvc_ioctl_g_parm to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @uvc_ioctl_g_parm(%struct.file* %0, i8* %1, %struct.v4l2_streamparm* %2) #0 {
  %4 = alloca %struct.file*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca %struct.v4l2_streamparm*, align 8
  %7 = alloca %struct.uvc_fh*, align 8
  %8 = alloca %struct.uvc_streaming*, align 8
  store %struct.file* %0, %struct.file** %4, align 8
  store i8* %1, i8** %5, align 8
  store %struct.v4l2_streamparm* %2, %struct.v4l2_streamparm** %6, align 8
  %9 = load i8*, i8** %5, align 8
  %10 = bitcast i8* %9 to %struct.uvc_fh*
  store %struct.uvc_fh* %10, %struct.uvc_fh** %7, align 8
  %11 = load %struct.uvc_fh*, %struct.uvc_fh** %7, align 8
  %12 = getelementptr inbounds %struct.uvc_fh, %struct.uvc_fh* %11, i32 0, i32 0
  %13 = load %struct.uvc_streaming*, %struct.uvc_streaming** %12, align 8
  store %struct.uvc_streaming* %13, %struct.uvc_streaming** %8, align 8
  %14 = load %struct.uvc_streaming*, %struct.uvc_streaming** %8, align 8
  %15 = load %struct.v4l2_streamparm*, %struct.v4l2_streamparm** %6, align 8
  %16 = call i32 @uvc_v4l2_get_streamparm(%struct.uvc_streaming* %14, %struct.v4l2_streamparm* %15)
  ret i32 %16
}

declare dso_local i32 @uvc_v4l2_get_streamparm(%struct.uvc_streaming*, %struct.v4l2_streamparm*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
